@@ -131,8 +131,8 @@
         "name": "Oneplus 6",
         "brand": "Oneplus",
         "codename": "enchilada",
-        "maintainer_name": "Rahul Singh",
-        "maintainer_url": "https://forum.xda-developers.com/member.php?u=9099644",
+        "maintainer_name": "Aditya Jadaun",
+        "maintainer_url": "https://forum.xda-developers.com/member.php?u=9654073",
         "xda_thread": "https://forum.xda-developers.com/oneplus-6/development"
     },
     {
